--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>Marie-Claire Sanches - CV en ligne</title>
 </head>
 <body>
+    <h1>Sanches Marie-Claire</h1>
+    <h2>CV en ligne</h2>
+    
+    <p>Actuellement étudiante en école de communication au CESACOM Paris, vous trouverez à travers ce CV en ligne mes expériences ainsi   </p>
     
 </body>
 </html>
