--- a/index.html
+++ b/index.html
@@ -5,10 +5,26 @@
     <title>Marie-Claire Sanches - CV en ligne</title>
 </head>
 <body>
+   <header>
+       <nav>
+           <ul>
+               <li><a href="index.html">Accueil</a></li>
+               <li>test</li>
+               <li>test</li>
+           </ul>
+       </nav>
+   </header>
+   
+   <main>
     <h1>Sanches Marie-Claire</h1>
     <h2>CV en ligne</h2>
     
-    <p>Actuellement étudiante en école de communication au CESACOM Paris, vous trouverez à travers ce CV en ligne mes expériences ainsi   </p>
+    <p>Actuellement étudiante en école de communication au CESACOM Paris, vous trouverez à travers ce CV en ligne mes formations ainsi que mes experiences professionnels</p>  
+   </main>
+   
+    <footer>
+       (mes liens réseaux sociaux)
+   </footer>
     
 </body>
 </html>
