Ajout pages manquantes

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Marie-Claire Sanches - CV en ligne</title>
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
    <header>
@@ -19,17 +18,19 @@
    
    <main>
     <h1>SANCHES Marie-Claire</h1>
-    <h2>Etudiante en communication </h2>
-    
-    <p>Actuellement étudiante en école de communication au CESACOM Paris, vous trouverez à travers ce CV en ligne mes formations ainsi que mes experiences professionnels</p>  
+    <p>14/06/1994</p>
+    <P> Permis B</P>
+    <h3>Adresse:</h3> 
+    <p>1 allée du tapis vert 95800 Cergy le haut </p> 
+    <h3> Tel: </h3>
+    <p> 06.33.55.48.76</p>
+    <h3> Mail: </h3>
+    <p> Marie-ClaireSanches@hotmail.fr</p>
    </main>
    
-     <footer> 
+  <footer> 
       <ul> 
           <li><a href="http://www.linkedin.com/trucidsoio"><img src="images/linkedin-icon.png" alt="Icone Linkedin" width="20px"></a></li>
           <li><a href="http://www.facebook.com"><img src="images/Icone-facebook.png" alt="icone facebook" width ="20px"></a></li>
       </ul>
   </footer>
-    
-</body>
-</html>
