--- a/experiences.html
+++ b/experiences.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Marie-Claire Sanches - CV en ligne</title>
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
    <header>
@@ -18,18 +17,20 @@
    </header>
    
    <main>
-    <h1>SANCHES Marie-Claire</h1>
-    <h2>Etudiante en communication </h2>
+    <h1>Experiences</h1>
+   <h2> Stages :</h2>
     
-    <p>Actuellement étudiante en école de communication au CESACOM Paris, vous trouverez à travers ce CV en ligne mes formations ainsi que mes experiences professionnels</p>  
-   </main>
-   
-     <footer> 
+    <p> - </p>  
+    <p> - </p>
+    <p> - </p>
+<p> - </p>
+<h2> Job : </h2>
+<P> - </P>
+<p> - </p>
+ 
+  <footer> 
       <ul> 
           <li><a href="http://www.linkedin.com/trucidsoio"><img src="images/linkedin-icon.png" alt="Icone Linkedin" width="20px"></a></li>
           <li><a href="http://www.facebook.com"><img src="images/Icone-facebook.png" alt="icone facebook" width ="20px"></a></li>
       </ul>
   </footer>
-    
-</body>
-</html>
