--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Marie-Claire Sanches - CV en ligne</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
    <header>
@@ -17,14 +18,14 @@
    </header>
    
    <main>
-    <h1>SANCHES Marie-Claire</h1>
+    <h1 style="font-family:Monotype Corsiva"> Sanches Marie-Claire</h1>
     <p>14/06/1994</p>
     <P> Permis B</P>
-    <h3>Adresse:</h3> 
+       <h3><em>Adresse:</em></h3> 
     <p>1 allée du tapis vert 95800 Cergy le haut </p> 
-    <h3> Tel: </h3>
+    <h3> <em>Tel:</em> </h3>
     <p> 06.33.55.48.76</p>
-    <h3> Mail: </h3>
+    <h3> <em>Mail:</em> </h3>
     <p> Marie-ClaireSanches@hotmail.fr</p>
    </main>
    
