--- a/experiences.html
+++ b/experiences.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Marie-Claire Sanches - CV en ligne</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
    <header>
@@ -18,13 +19,13 @@
    
    <main>
     <h1>Experiences</h1>
-   <h2> Stages :</h2>
+   <h2> <em>Stages :</em></h2>
     
     <p> - </p>  
     <p> - </p>
     <p> - </p>
 <p> - </p>
-<h2> Job : </h2>
+<h2> <em>Job :</em> </h2>
 <P> - </P>
 <p> - </p>
  
