--- a/formations.html
+++ b/formations.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Marie-Claire Sanches - CV en ligne</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
    <header>
@@ -18,11 +19,11 @@
    
    <main>
     <h1>Formations et diplomes</h1>
-   <h2> Formations</h2>
+   <h2> <em>Formations</em> </h2>
    <p> - </p>
    <p> - </p>
    <p> - </p>
-   <h2> Diplomes </h2>
+   <h2> <em>Diplomes</em> </h2>
 <p> - </p>
 <p> - </p>
  
