--- a/experiences.html
+++ b/experiences.html
@@ -21,13 +21,15 @@
     <h1>Experiences</h1>
    <h2> <em>Stages :</em></h2>
     
-    <p> - </p>  
-    <p> - </p>
-    <p> - </p>
-<p> - </p>
+    <p> - Stage au service communication des écuries de la Chevée, 4 semaines.  </p>  
+    <p> - Stage de communication dans la société Pool Event Production, 7 semaines. </p>
+    <p> - Stage évenementiel dans la société Celebrate Event, 6 semaines. </p>
+<p> - Stage en régie dans la société Webrentable. 4 semaines. </p>
 <h2> <em>Job :</em> </h2>
-<P> - </P>
-<p> - </p>
+<P> -Vendeuse dans la boutique de vetements Mim. </P>
+<p> - Travail de deux mois au service technique de la base de loisir de cergy. </p>
+<p> -Vendeuse sur un marché. </p>
+    </main>
  
   <footer> 
       <ul> 
