--- a/formations.html
+++ b/formations.html
@@ -20,13 +20,13 @@
    <main>
     <h1>Formations et diplomes</h1>
    <h2> <em>Formations</em> </h2>
-   <p> - </p>
-   <p> - </p>
-   <p> - </p>
+   <p> - 2014-2015 BTS communication à Cesacom, Paris  </p>
+   <p> - 2012- 2014 BTS communication à Isefac bachelors, Paris </p>
+   <p> - 2010-2012 bac STG Mercatique lycée Camille Claudel à Vauréal </p>
    <h2> <em>Diplomes</em> </h2>
-<p> - </p>
-<p> - </p>
- 
+<p> - 2012 Bac STG Mercatique  </p>
+<p> - 2009 Brevet des collèges </p>
+    </main>
   <footer> 
       <ul> 
           <li><a href="http://www.linkedin.com/trucidsoio"><img src="images/linkedin-icon.png" alt="Icone Linkedin" width="20px"></a></li>
