--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
        </nav>
    </header>
    
-   <main>
+   <main class="main-center">
     <h1 style="font-family: Monotype Corsiva; font-size: 50px"> Sanches Marie-Claire</h1>
-    <img src="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-xap1/v/t1.0-9/10653392_634974543283156_5503682077486709202_n.jpg?oh=5c059f95c2e39ccdfb26be1d0d179a2b&oe=5509F0CF&__gda__=1423448595_b911982157cf5bbd2df33193189a1a49" height="200">
+    <img src="images/photocv.jpg" height="270">
     <h2> <em>Etudiante en communication</em> </h2>
     
     <p>Actuellement étudiante en école de communication au CESACOM Paris, vous trouverez à travers ce CV en ligne mes formations ainsi que mes experiences professionnels</p>  
