--- a/contact.html
+++ b/contact.html
@@ -19,14 +19,23 @@
    
    <main>
     <h1 style="font-family:Monotype Corsiva"> Sanches Marie-Claire</h1>
-    <p>14/06/1994</p>
-    <P> Permis B</P>
-       <h3><em>Adresse:</em></h3> 
-    <p>1 allée du tapis vert 95800 Cergy le haut </p> 
-    <h3> <em>Tel:</em> </h3>
-    <p> 06.33.55.48.76</p>
-    <h3> <em>Mail:</em> </h3>
-    <p> Marie-ClaireSanches@hotmail.fr</p>
+    <div class="anniversaire">
+    <img src="images/anniversairee.png"/>
+    </div>
+    <div class="voiture">
+    <img src="images/voiture.png"/>
+        </div>
+       <p>
+        <img src="images/adresse.png"/>
+        <span class="text-image">1 allée du tapis vert 95800 Cergy le haut</span>
+       </p> 
+       <p>
+       <img src="images/telephone.png"/>
+       <span class="text-image"> 06.33.55.48.76</span> </p>
+       <p> 
+           <img src="images/mail.png"/>
+     <span class="text-image">Marie-ClaireSanches@hotmail.fr </span>
+         </p>
    </main>
    
   <footer> 
