--- a/experiences.html
+++ b/experiences.html
@@ -29,6 +29,15 @@
 <P> -Vendeuse dans la boutique de vetements Mim. </P>
 <p> - Travail de deux mois au service technique de la base de loisir de cergy. </p>
 <p> -Vendeuse sur un marché. </p>
+    <h2> <em> compétences : </em></h2>
+       <img src="images/word.png" width="80px" /> 
+       <img src="images/excel.png"  width="80px"/>
+       <img src="images/powerpoint.png"  width="80px"/>
+       <img src="images/photoshop.png" width="80px"/>
+       <img src="images/Indesign.png" width="80px"/>
+       <img src="images/Illustrator.png" width="80px"/>
+       <img src="images/Premiere.png" width="80px"/>
+       
     </main>
  
   <footer> 
